# RAG-Project

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCKER_QUICKSTART.md  Dockerfile  ENV_VARIABLES.md  FOLDER_STRUCTURE.txt  FRONTEND_TEST_REPORT.md  PDF_EMBEDDING_TROUBLESHOOTING.md  README.md  alembic.ini  backend-run.bat  bash.exe.stackdump  docker-compose.yml  dockerfile  frontend-run.bat  hello.py  pyproject.toml  railway.toml  run.py  start.sh  test_auth.html  test_history.py  test_history.sh
.claude/: settings.local.json
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: add_bm25_indexed_column.py  add_password_reset_tokens.py  add_request_logs.py  add_system_metrics.py  db3da67e3ba1_initial_migration_with_all_models.py
data/: sample_document.txt
data/uploads/4eff713a-5c09-41da-88e1-acefffc13bdf/: f37d065b-5b25-48b8-818f-33b5b6f06395.docx
data/uploads/c776b5ef-280b-425a-a4ac-607b9941f23e/: 2bcd065e-98f7-40b0-b9eb-ea0713e630ec.txt  ebd10bdf-de7d-4ff1-b063-0e7a78eb4464.docx
frontend/rag-frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/rag-frontend/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/rag-frontend/src/app/(auth)/: layout.tsx
frontend/rag-frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/rag-frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/rag-frontend/src/components/layout/: Header.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/rag-frontend/src/lib/: constants.ts
frontend/rag-frontend/src/lib/api/: auth.ts  client.ts
frontend/rag-frontend/src/types/: api.ts  auth.ts  chat.ts  document.ts
scripts/: run_documents.py
specs/001-api-rate-limiting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-api-rate-limiting/adrs/: 001-rate-limiting-library.md  002-storage-backend.md  003-algorithm-choice.md  004-implementation-pattern.md
specs/001-api-rate-limiting/checklists/: requirements.md
specs/001-api-rate-limiting/contracts/: rate-limit-responses.yaml
specs/002-backend-production-readiness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-backend-production-readiness/checklists/: requirements.md
specs/002-backend-production-readiness/contracts/: password-reset.yaml
src/rag/: config.py  documents.py  embeddings.py  gemini_model.py  llm_integration.py  main.py  rag_pipeline.py  vectorstore.py
src/rag/api/: deps.py
src/rag/api/v1/: auth.py  rag.py
src/rag/core/: config.py  database.py  logging.py  rate_limiter.py  security.py
src/rag/crud/: __init__.py  document.py  token.py  user.py
src/rag/models/: base.py  document.py  password_reset.py  query.py  request_log.py  system_metric.py  token.py  user.py
src/rag/schemas/: auth.py  document.py  logging.py  password_reset.py  query.py  user.py
src/rag/services/: __init__.py  auth_service.py  document_service.py  email_service.py  llm_service.py  rag_service.py  search_service.py
tests/: conftest.py  test.py  test_auth.py  test_config.py  test_db.py  test_pinecone.py
tests/integration/: test_email_and_logging.py  test_graceful_degradation.py  test_rate_limits.py  test_upload_pipeline.py
tests/mocks/: __init__.py  email_mock.py  llm_mock.py  pinecone_mock.py
tests/unit/: test_documents.py  test_embeddings.py  test_search.py
(+10 files in other folders)
